--- a/src/components/pillars/PillarView.css
+++ b/src/components/pillars/PillarView.css
@@ -1,5 +1,25 @@
 .pillars {
-    background:url("./img/three-pillars-1.png");
-    height: 100vh;
+    background:url("./img/greek-pattern.jpg");
+    background-repeat: repeat-y;
+    /* background-repeat: no-repeat; */
+    /* height: 100vh; */
      
 }
+
+h1 {
+    font-size: 2rem;
+}
+
+button {
+    opacity: 95%;
+}
+
+.card {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    opacity: 95%;
+    margin-inline: 2rem;
+}
+/* questTitle {
+    font-size: 1.5rem;
+} */
